# dotgit

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: main.cpp  registry.cpp  registry.h
src/checkout/: checkout.cpp  checkout.h
src/commit/: commit.cpp  commit.h
src/init/: initialize.cpp  initialize.h
src/log/: log.cpp  log.h
src/stage/: addition.h  additon.cpp
src/switch/: switch.cpp
